# Bragi

./: .gitignore  CMakeLists.txt  README.md
cmake/: LoggingOptions.cmake
exampleProject/: CMakeLists.txt
include/: Logging.h  Logging.tcc  MarsLogging  bragi
src/: BragiUtils.h  LogBuffer.h  LogWriter.h  Logger.h  Logging.h  Logging.tcc  LoggingTypes.h  LoggingUtilityMacros.h
