##▁0▁INITIATE▁PROJECT▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
cmake_minimum_required(VERSION 3.14)
project(loggingExample)


##▁1▁GET▁THE▁MARSLOGGING▁LIBRARY▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
#                  ↓ the dir to the marsLogging CMakeLists.txt file
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/.. MarsLogging)
#                                             ↑ explicitly defined binary sub-directory

# Note: As soon as MarsLogging has the necessary functionalities this can be substuituted
# with: `find_package(marsLogging)`


##▁2▁ADD▁TARGETS▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
###_the_bare_minimum:_hello_world_________________________________________________________
add_executable(hello_world bin/hello_world.cpp)
target_link_libraries(hello_world PRIVATE marsLogging_config)
